--- a/6938925b8a0a4a9b94a843cd60f94aa7.opf/meta.yml
+++ b/6938925b8a0a4a9b94a843cd60f94aa7.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     0f1cd367240a44e497c868b5b353633d:
       base_file: v063.txt
       image_group_id: I1PD95909
-      title: ''
+      title: སྙིང་པོ་བསྡུས་པ།
       total_pages: 1902
       volume_number: 64
