--- a/DAEE0AE22.opf/index.yml
+++ b/DAEE0AE22.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   bf247b02941942398b4781a533e25423:
     parts: {}
+    work_id: D3949
     span:
-    - vol: 64
+    - base: 48b5
       start: 1
       end: 2396
-    work_id: D3949
